package com.example.highenddetailing.employeessubdomain.datalayer;

public class InviteResponse {
    public String inviteLink;
    public InviteResponse(String inviteLink) {
        this.inviteLink = inviteLink;
    }
}
