package com.example.highenddetailing.employeessubdomain.mapperlayer;

public interface EmployeeRequestMapper {
}
